<resources>
    <string name="app_name">JustGo</string>
    <string name="title_activity_single_trip">ActivitySingleTrip</string>
    <!-- Strings used for fragments for navigation -->

    <string name="add_destination_editText">Add Destination</string>

    <string name="add_item">add item</string>
    <string name="add_date">Add Date</string>

    <string name="create_trip_topic">Create Trip</string>
    <string name="create_trip_name">Name: </string>

    <string name="addFood_topic">Add Food</string>
    <string name="foodName_textView">Name:</string>
    <string name="foodLocation_textView">Location:</string>
    <string name="foodType_textView">Type:</string>
    <string name="food_topic">Food</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="lunch_dinner_button">Lunch/Dinner</string>

    <string-array name="dropdown_string_array">
        <item>sort by...</item>
        <item>trip name</item>
    </string-array>
    <string name="btn_mytrips">MY TRIPS</string>
    <string name="btn_sampletrips">SAMPLE TRIPS</string>
    <string name="btn_sharedtrips">SHARED TRIPS</string>
    <string name="btn_language">RU</string>
    <string name="txtfield_name">Name: </string>
    <string name="txtfield_dest">Destinations</string>
    <string name="txtfield_accomodation">Accomodation</string>
    <string name="title_activity_destinations">Map</string>

    <string name="pictures_and_videos_topic">Pictures and Videos</string>
    <string name="pictures_and_videos_button_before">Before</string>
    <string name="pictures_and_videos_button_from">From</string>
    <string name="pictures_and_videos_button_back">Back</string>
    <string name="pictures_and_videos_button_delete">Delete</string>

    <string name="co_travellers_text_view">Co-Travellers</string>
    <string name="add_new_co_travellers_topic">New Co-Traveller</string>
    <string name="add_new_co_travellers_name">Name: </string>
    <string name="name_heading">Name:</string>
    <string name="cost_heading">Spendings:</string>
    <string name="tasks_heading">Tasks:</string>
    <string name="cost_text_prompt">tap here to add spending</string>
    <string name="task_text_prompt">Tap here to add task...</string>
    <string name="food_string">Foods</string>
    <string name="food_finder">Foods Finder</string>

    <string name="add_new_date_date">Date: </string>
    <string name="add_new_date_time">Time: </string>
    <string name="add_new_date_description">Description: </string>

    <string name="costs_topic">Costs</string>
    <string name="add_new_cost_topic">Add Cost</string>
    <string name="add_new_cost_description">Description: </string>
    <string name="add_new_cost_amount">Amount: </string>
</resources>