<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".Food.FoodsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="36sp"
        android:text="@string/food_topic"
        android:layout_marginTop="8dp"
        android:id="@+id/food_topic"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/add_food_button"
        app:srcCompat="@android:drawable/ic_input_add"
        android:clickable="true"
        android:layout_marginEnd="8dp"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/breakfast_button"
        android:layout_marginTop="16dp"
        android:id="@+id/breakfast_button"
        app:layout_constraintTop_toBottomOf="@+id/food_topic"
        android:layout_marginStart="64dp"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lunch_dinner_button"
        android:layout_marginTop="16dp"
        android:id="@+id/lunch_dinner_button"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@+id/food_topic"/>

    <androidx.recyclerview.widget.RecyclerView android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/food_listview"
        app:layout_constraintTop_toBottomOf="@+id/lunch_dinner_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/food_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>