<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".Food.AddNewFoodActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="70dp"
        android:layout_width="219dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/addFood_topic"
        android:layout_marginTop="80dp"
        android:id="@+id/addFood_topic"/>

    <TextView android:layout_height="37dp"
        android:layout_width="110dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:text="@string/foodName_textView"
        android:layout_marginTop="32dp"
        android:id="@+id/foodName_textView"
        app:layout_constraintTop_toBottomOf="@+id/addFood_topic"
        android:layout_marginStart="32dp"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/foodName_textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/foodName_EditText"
        app:layout_constraintStart_toEndOf="@+id/foodName_textView"
        android:inputType="textPersonName"
        android:ems="10"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/foodLocation_textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/foodLocation_EditText"
        app:layout_constraintStart_toEndOf="@+id/foodLocation_textView"
        android:inputType="textPersonName"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.513"/>

    <TextView android:layout_height="40dp"
        android:layout_width="109dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:text="@string/foodLocation_textView"
        android:layout_marginTop="24dp"
        android:id="@+id/foodLocation_textView"
        app:layout_constraintTop_toBottomOf="@+id/foodName_textView"
        android:layout_marginStart="32dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/saveFood_floatActionButton"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:clickable="true"
        android:background="@android:drawable/ic_menu_save"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/discardFood_floatActionButton"
        android:layout_marginStart="32dp"
        app:srcCompat="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:clickable="true"
        android:layout_marginBottom="32dp"/>

    <Spinner android:layout_height="48dp"
        android:layout_width="208dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/foodType_dorpdown"
        app:layout_constraintTop_toBottomOf="@+id/foodLocation_EditText"
        app:layout_constraintHorizontal_bias="0.852"/>

    <TextView android:layout_height="43dp"
        android:layout_width="111dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:text="@string/foodType_textView"
        android:layout_marginTop="24dp"
        android:id="@+id/foodType_textView"
        app:layout_constraintTop_toBottomOf="@+id/foodLocation_textView"
        android:layout_marginStart="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>