<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotosAndVideosActivity">

    <TextView
        android:id="@+id/pictures_and_videos_topic_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pictures_and_videos_topic"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pictres_and_videos_before_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pictures_and_videos_button_before"
        app:layout_constraintEnd_toStartOf="@+id/pictures_and_videos_from_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictures_and_videos_topic_textView" />

    <Button
        android:id="@+id/pictures_and_videos_from_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pictures_and_videos_button_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictures_and_videos_topic_textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pictures_and_videos_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictures_and_videos_from_button"
        app:layout_constraintTop_toBottomOf="@+id/pictures_and_videos_topic_textView"
        app:srcCompat="@android:drawable/ic_input_add" />

    <GridView
        android:id="@+id/pictures_and_videos_gridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictures_and_videos_add_button"
        android:numColumns="2"
        android:horizontalSpacing="4dp"
        android:verticalSpacing="4dp"/>

    <ImageView
        android:id="@+id/preview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:visibility="gone"
        android:background="#000000"
        android:padding="3dp"/>

    <VideoView
        android:id="@+id/preview_videoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/pictures_and_videos_gridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:background="#000000"
        android:padding="3dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>